# spectacular_ai_ros

./: readme.md
spectacular_ai_msgs/: CMakeLists.txt  package.xml
spectacular_ai_msgs/msg/: VioOutput.msg
spectacular_ai_wrapper/: CMakeLists.txt  package.xml  setup.py
spectacular_ai_wrapper/config/: oakd.rviz  oakd_config.yaml
spectacular_ai_wrapper/launch/: oak_spectacularai.launch
spectacular_ai_wrapper/scripts/: oakd_spectacularai_node.py
spectacular_ai_wrapper/src/spectacular_ai_wrapper/: message_converter.py
