<package format="2">
  <name>spectacular_ai_msgs</name>
  <version>0.0.0</version>
  <description>The spectacular_ai_msgs package</description>

  <maintainer email="brendan@todo.todo">brendan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend> <!-- Ensure this line is present -->
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> <!-- Add this line -->

</package>

